<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/button"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/image3">


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView.recover"
        android:layout_width="356dp"
        android:layout_height="459dp"
        android:layout_margin="16dp"
        android:scaleType="centerCrop"
        android:contentDescription="@string/card_content_description"
        app:cardCornerRadius="16dp"
        app:cardElevation="4dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/backgroundImageView.recover"

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0.5"
            android:contentDescription="@string/background_image_description"
            android:scaleType="centerCrop"
            android:src="@drawable/image3"
            app:layout_constraintBottom_toBottomOf="parent"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/myConstraintLayout.recover"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/blur_background"
            android:scaleType="centerCrop">


            <EditText
                android:id="@+id/passwordEditText.recover"
                android:layout_width="242dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:autofillHints="password"
                android:background="@drawable/edittext_border"
                android:hint="@string/passwordEditText.recover"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.515"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.408" />


            <Button
                android:id="@+id/MyButton.recover"
                android:layout_width="224dp"
                android:layout_height="50dp"
                android:background="@drawable/edittext_border"
                android:onClick="loginButtonClicked"
                android:text="@string/MyButton.recover"
                android:textColor="@android:color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.789" />





            <EditText
                android:id="@+id/usernameEditText.recover"
                android:layout_width="242dp"
                android:layout_height="48dp"
                android:autofillHints="username"
                android:background="@drawable/edittext_border"
                android:hint="@string/username_hint"

                android:inputType="text"
                android:padding="10dp"
                android:textColor="@android:color/white"
                android:textColorHint="#FFFFFF"
                app:layout_constraintBottom_toTopOf="@+id/passwordEditText.recover"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.525"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/loginTextView.recover" />

            <TextView
                android:id="@+id/loginTextView.recover"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/loginTextView.recover"
                android:textColor="@android:color/white"
                android:textSize="27sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/usernameEditText.recover"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.381" />

            <TextView
                android:id="@+id/sendCodeText"
                android:layout_width="75dp"
                android:layout_height="48dp"
                android:clickable="true"
                android:focusable="true"
                android:onClick="sendEmail"
                android:text="@string/sendCodeText.recover"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.185"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.568"
                tools:ignore="MissingConstraints,TextSizeCheck" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>






















